# job-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-ai.txt  requirements-api.txt  requirements-automation.txt  requirements-base.txt  requirements-dev.txt  requirements-hf.txt  requirements.txt  sample_cv.txt  sample_jobs.json
.github/workflows/: ci.yml  daily-refresh.yml
backend/: celery_app.py  config.py  database.py  main.py  seed_data.py
backend/api/: __init__.py  applications.py  ats_checker.py  automation.py  cover_letter.py  dashboard.py  jobs.py  live_jobs.py  notifications.py  persona.py  profiles.py  resume.py
backend/middleware/: __init__.py  auth.py  rate_limit.py  timing.py
backend/migrations/: env.py
backend/models/: __init__.py  db_models.py  profile.py
backend/services/: __init__.py  analyzer.py  ats_checker.py  browser_automation.py  captcha_detector.py  career_page_scanner.py  cover_letter_generator.py  cv_parser.py  email_service.py  embedding.py  human_loop.py  matcher.py  (+4 more)
cli/: run.py
dashboard/: app.js  ats-checker.html  ats-checker.js  index.html  live-jobs.html  persona.html  style.css
tests/: conftest.py  test_analyzer.py  test_api.py  test_ats_adapters.py  test_auth_middleware.py  test_browser_automation.py  test_captcha_detector.py  test_cli.py  test_cover_letter.py  test_cover_letter_api.py  test_cv_parser.py  test_db_models.py  test_embedding.py  test_human_loop.py  test_job_discovery.py  test_matcher.py
(+25 files in other folders)
